--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,9 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Sign_Up">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:ignore="ScrollViewSize">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sign_up"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/_28sdp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/_40sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/create_new_account"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/_28sdp"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/_25sdp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:autofillHints="name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_25sdp"
+                        android:textStyle="bold"
+                        android:text="@string/enter_name"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <EditText
+                        android:inputType="text"
+                        android:autofillHints="name"
+                        android:id="@+id/name_information_sign_up_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_25sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/less_border_blue"
+                        android:hint="@string/enter_name"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <TextView
+                        android:autofillHints="name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_25sdp"
+                        android:textStyle="bold"
+                        android:text="@string/enter_email"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <EditText
+                        android:inputType="textEmailAddress"
+                        android:autofillHints="emailAddress"
+                        android:id="@+id/email_information_sign_up_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/less_border_blue"
+                        android:hint="@string/enter_email"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <TextView
+                        android:autofillHints="name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_25sdp"
+                        android:textStyle="bold"
+                        android:text="@string/enter_password"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <EditText
+                        android:inputType="textPassword"
+                        android:autofillHints="password"
+                        android:id="@+id/password_information_sign_up_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/less_border_blue"
+                        android:hint="@string/enter_password"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <TextView
+                        android:autofillHints="name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_25sdp"
+                        android:textStyle="bold"
+                        android:text="@string/confirm_password"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                    <EditText
+                        android:inputType="textPassword"
+                        android:autofillHints="password"
+                        android:id="@+id/confirm_password_information_sign_up_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/less_border_blue"
+                        android:hint="@string/confirm_password"
+                        android:textAlignment="viewStart"
+                        android:padding="@dimen/_7sdp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_18sdp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <CheckBox
+                        android:id="@+id/checkbox_agree_for_terms_and_condition_at_sign_up_page"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_30sdp"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:textSize="@dimen/_10sdp"
+                        android:text="@string/agree_to_terms_and_condition"
+                        android:textColor="@color/black"
+                        />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/save_account_creation_information"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:background="@drawable/less_border_purple"
+                        android:text="@string/save"
+                        android:textSize="@dimen/_18sdp"
+                        android:textStyle="bold"
+                        android:textColor="@color/white" />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/already_have_an_account_sign_up_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:text="@string/already_have_an_account"
+                        android:textSize="@dimen/_12sdp"
+                        android:layout_marginBottom="@dimen/_50sdp"
+                        android:textAlignment="center"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
