--- a/app/src/main/res/layout/text_spinner.xml
+++ b/app/src/main/res/layout/text_spinner.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:textSize="@dimen/_16sdp"
-    android:textColor="@color/black"
-    android:textAppearance="?attr/textAppearanceSubtitle1"
-    android:layout_height="match_parent"/>
+    android:id="@+id/text"
+android:ellipsize="end"
+android:maxLines="1"
+android:textSize="@dimen/_16sdp"
+android:textColor="@color/black"
+android:textAppearance="?attr/textAppearanceSubtitle1"
+android:layout_height="wrap_content">
+
+</TextView>
