--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.GradeACE" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:textColorSecondary">@color/black</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.GradeACE" parent="Base.Theme.GradeACE" />
+    <style name="Theme.GradeACE" parent="Base.Theme.GradeACE" >
+        <item name="android:textColorSecondary">@color/black</item>
+    </style>
 </resources>
