--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item app:showAsAction="withText" android:title="@string/contact_owner" android:id="@+id/contact_owner" android:icon="@drawable/connection"/>
     <item app:showAsAction="withText" android:title="@string/delete_account" android:id="@+id/delete_account" android:icon="@drawable/delete_account"/>
+    <item app:showAsAction="withText" android:title="@string/ogpa_graph" android:id="@+id/graph_at_menu" android:icon="@drawable/diagram"/>
     <item app:showAsAction="withText" android:title="@string/logout" android:id="@+id/logout" android:icon="@drawable/logout"/>
     <item app:showAsAction="withText" android:title="@string/refresh" android:id="@+id/refresh" android:icon="@drawable/reload"/>
     <item app:showAsAction="withText" android:title="@string/report_error" android:id="@+id/report_error" android:icon="@drawable/problem"/>
