--- a/app/src/main/res/layout/name_recycler_grapg_view.xml
+++ b/app/src/main/res/layout/name_recycler_grapg_view.xml
@@ -11,7 +11,7 @@
         android:elevation="@dimen/_2sdp"
         android:visibility="visible"
         app:cardBackgroundColor="@color/blue"
-        app:cardCornerRadius="@dimen/_50sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="false"
         app:contentPadding="@dimen/_5sdp"
         app:strokeColor="@color/black"
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/name_info_graphview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,7 +33,7 @@
                 android:text=""
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_25sdp"
+                android:textSize="@dimen/_20sdp"
                 tools:ignore="InefficientWeight" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
