OPGA misspelling corrected to OGPA.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,12 +34,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/less_border_purple"
-                android:text="@string/add_opga"
+                android:text="@string/add_OGPA"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:layout_marginBottom="@dimen/_50sdp"
-                android:id="@+id/add_opga"
+                android:id="@+id/add_OGPA"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
                 android:textStyle="bold"/>
