BSC AGRICULTURE page added and can be accessed from main page where two more courses are to be added, menu options changed.

--- a/app/src/main/res/layout/activity_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_ogpa_calculator.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OGPA_calculator">
+    tools:context=".BSC_AGRICULTURE_OGPA_Calculator">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
