--- a/app/src/main/res/layout/activity_bsc_agriculture.xml
+++ b/app/src/main/res/layout/activity_bsc_agriculture.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".BSC_AGRICULTURE">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
