--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
+                android:theme="@style/font_bold"
+                style="@style/font_bold"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="match_parent"
@@ -26,7 +28,6 @@
                     android:text="@string/login_all_caps_heading"
                     android:textAlignment="center"
                     android:textSize="@dimen/_28sdp"
-                    android:textStyle="bold"
                     android:layout_marginTop="@dimen/_40sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColor="@color/black"/>
@@ -36,7 +37,6 @@
                     android:text="@string/welcome_back"
                     android:textAlignment="center"
                     android:textSize="@dimen/_28sdp"
-                    android:textStyle="bold"
                     android:layout_marginBottom="@dimen/_25sdp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -50,6 +50,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
+                        android:theme="@style/font_semi_bold"
+                        style="@style/font_semi_bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/login_in_your_account"
@@ -60,6 +62,8 @@
                         android:layout_marginLeft="@dimen/_25sdp"
                         android:textColor="@color/black"/>
                     <TextView
+                        android:theme="@style/font_semi_bold"
+                        style="@style/font_semi_bold"
                         android:autofillHints="emailAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -74,6 +78,8 @@
                         android:textColorHint="@color/black"
                         android:textSize="@dimen/_18sdp" />
                     <EditText
+                        android:theme="@style/font_regular"
+                        style="@style/font_regular"
                         android:inputType="textEmailAddress"
                         android:autofillHints="emailAddress"
                         android:id="@+id/email_information_login_page"
@@ -89,6 +95,8 @@
                         android:textColorHint="@color/black"
                         android:textSize="@dimen/_18sdp" />
                     <TextView
+                        android:theme="@style/font_semi_bold"
+                        style="@style/font_semi_bold"
                         android:autofillHints="emailAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -103,6 +111,8 @@
                         android:textColorHint="@color/black"
                         android:textSize="@dimen/_18sdp" />
                     <EditText
+                        android:theme="@style/font_regular"
+                        style="@style/font_regular"
                         android:inputType="textPassword"
                         android:autofillHints="password"
                         android:id="@+id/password_information_login_page"
@@ -127,6 +137,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/white"
+                        android:theme="@style/font_regular"
+                        style="@style/font_regular"
                         android:text="@string/forgot_password"
                         android:textSize="@dimen/_12sdp"
                         android:textAlignment="center"
@@ -138,6 +150,9 @@
                     android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatButton
+
+                        android:theme="@style/font_bold"
+                        style="@style/font_bold"
                         android:id="@+id/login_at_login_page"
                         android:layout_width="match_parent"
                         android:layout_marginTop="@dimen/_50sdp"
@@ -147,7 +162,6 @@
                         android:background="@drawable/less_border_purple"
                         android:text="@string/login"
                         android:textSize="@dimen/_18sdp"
-                        android:textStyle="bold"
                         android:textColor="@color/white" />
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/sign_up_at_login_page"
@@ -155,6 +169,8 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:text="@string/does_not_have_an_account"
+                        android:theme="@style/font_regular"
+                        style="@style/font_regular"
                         android:textSize="@dimen/_12sdp"
                         android:textAlignment="center"
                         android:layout_marginBottom="@dimen/_50sdp"
