--- a/app/src/main/res/layout/activity_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_ogpa_calculator.xml
@@ -21,6 +21,8 @@
                 android:background="@color/white"
                 app:titleTextColor="@color/black"
                 app:subtitleTextColor="@color/black"
+                android:theme="@style/font_bold"
+                style="@style/font_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/toolbar_calculator"/>
@@ -43,7 +45,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_1"
                     android:padding="@dimen/_5sdp"
@@ -57,6 +60,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -75,6 +80,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -103,7 +110,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_2"
                     android:padding="@dimen/_5sdp"
@@ -117,6 +125,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
@@ -135,6 +145,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -163,7 +175,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_3"
                     android:padding="@dimen/_5sdp"
@@ -178,6 +191,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -195,6 +210,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -223,7 +240,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_4"
                     android:padding="@dimen/_5sdp"
@@ -237,6 +255,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
@@ -255,6 +275,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -283,7 +305,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_5"
                     android:padding="@dimen/_5sdp"
@@ -298,6 +321,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -315,6 +340,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -343,7 +370,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_6"
                     android:padding="@dimen/_5sdp"
@@ -358,6 +386,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -375,6 +405,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -403,7 +435,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_7"
                     android:padding="@dimen/_5sdp"
@@ -417,6 +450,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textSize="@dimen/_18sdp"
@@ -435,6 +470,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -463,7 +500,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_8"
                     android:padding="@dimen/_5sdp"
@@ -477,6 +515,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textSize="@dimen/_18sdp"
@@ -495,6 +535,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -523,7 +565,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_9"
                     android:padding="@dimen/_5sdp"
@@ -538,6 +581,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -555,6 +600,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -583,7 +630,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_10"
                     android:padding="@dimen/_5sdp"
@@ -598,6 +646,8 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -615,6 +665,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -643,7 +695,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_11"
                     android:padding="@dimen/_5sdp"
@@ -658,6 +711,8 @@
                     android:hint="@string/enter_theory_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -675,6 +730,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -706,7 +763,8 @@
                     android:text=""
                     android:textSize="@dimen/_20sdp"
                     android:textAlignment="viewStart"
-                    android:textStyle="bold"
+                    android:theme="@style/font_semi_bold"
+                    style="@style/font_semi_bold"
                     android:textColor="@color/black"
                     android:id="@+id/subject_name_12"
                     android:padding="@dimen/_5sdp"
@@ -721,6 +779,8 @@
                     android:textColorHint="@color/black"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -738,6 +798,8 @@
                     android:hint="@string/enter_practical_marks"
                     android:textColorHint="@color/black"
                     android:maxLength="8"
+                    android:theme="@style/font_regular"
+                    style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/_18sdp"
                     android:textAlignment="viewStart"
@@ -762,7 +824,10 @@
                 android:id="@+id/calculate"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:padding="@dimen/_5sdp"
+                android:theme="@style/font_bold"
+                style="@style/font_bold"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
