--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -16,6 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:theme="@style/font_bold"
+            style="@style/font_bold"
             tools:ignore="ScrollViewSize">
             <androidx.appcompat.widget.Toolbar
                 app:title="--"
@@ -33,24 +35,28 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_15sdp"
+                android:textAlignment="center"
                 android:layout_marginBottom="@dimen/_15sdp"
+                android:padding="@dimen/_5sdp"
                 android:id="@+id/bsc_agriculture"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
-                android:textStyle="bold"/>
+                />
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/less_border_purple"
                 android:text="@string/bsc_horticulture"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:padding="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:layout_marginBottom="@dimen/_15sdp"
                 android:id="@+id/bsc_horticulture"
                 android:textColor="@color/white"
+                android:textAlignment="center"
                 android:textSize="@dimen/_25sdp"
-                android:textStyle="bold"/>
+                />
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,9 +67,11 @@
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:layout_marginBottom="@dimen/_50sdp"
                 android:id="@+id/btech_agriculture"
+                android:padding="@dimen/_5sdp"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
-                android:textStyle="bold"/>
+                />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
