--- a/app/src/main/res/layout/add_new_ogpa_criteria.xml
+++ b/app/src/main/res/layout/add_new_ogpa_criteria.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:theme="@style/font_regular"
+    style="@style/font_regular"
     android:layout_height="wrap_content">
     <EditText
         android:layout_width="match_parent"
